fix alignment of message count

--- a/style/custom.css
+++ b/style/custom.css
@@ -826,6 +826,8 @@ body.has_dock .navbar-fixed-top {
     }
     .navbar .nav.pull-right .nav > li.messages a,
     .navbar .nav.pull-right .nav > li:first-of-type a {
+        margin-top:-2px;
+        margin-left:12px;
         padding:9px;
         border:none;
         background:#EE8321;
@@ -833,7 +835,7 @@ body.has_dock .navbar-fixed-top {
     }
     .navbar .nav.pull-right .nav > li.messages a ot,
     .navbar .nav.pull-right .nav > li:first-of-type a ot {
-        top:-2px;
+        top:-1px;
         left:0;
 
     }
